--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Audio Ticket</string>
-    <string name="app_name_c">AUDIO TICKET</string>
+    <string name="app_name">Media Ticket</string>
+    <string name="app_name_c">MEDIA TICKET</string>
     <string name="init_time">00:00</string>
     <string name="play">Play</string>
     <string name="pause">Pause</string>
@@ -13,9 +13,18 @@
     <string name="retrieve_data">RETRIEVING USER DATA</string>
     <string name="title_activity_main">MainActivity</string>
 
+    <string name="title_activity_new_audio_ticket">New Audio Ticket</string>
+    <string name="title_activity_new_medida_ticket">New Media Ticket</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_new_ticket">New Ticket</string>
+
+    <string name="btnIntend">Take (big) Picture</string>
+    <string name="btnIntendS">Take (small) Picture</string>
+    <string name="btnIntendV">Take Video</string>
+    <string name="cannot">Cannot</string>
+    <string name="album_name">MediaTicket</string>
+
 
 
 </resources>
