--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="title_activity_new_audio_ticket">New Audio Ticket</string>
     <string name="title_activity_new_medida_ticket">New Media Ticket</string>
     <string name="hello_world">Hello world!</string>
+
+    <string name="action_img">Image</string>
+    <string name="action_video">Video</string>
+    <string name="action_audio">Audio</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_new_ticket">New Ticket</string>
     <string name="action_audio">Audio</string>
