View Image and open it on new Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="cannot">Cannot</string>
     <string name="album_name">MediaTicket</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="title_activity_image_detail">ImageDetailActivity</string>
 
 
 
